--- a/src/index.html
+++ b/src/index.html
@@ -16,8 +16,10 @@
   </head>
   <body>
     <!-- Loads the specified .html file -->
+    <div class="background">
     <load ="partials/header.html" />
     <load ="partials/hero.html" />
+  </div>
     <load ="partials/block.html" />
     <load ="partials/about_us.html" />
     <load ="partials/our_courses.html" />
